--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,26 @@
+html {
+	font-size: 12px;
+}
+
 body {
 	background: gray;
 }
 
 body>div>article {
 	margin: 16px;
-	padding: 30px;
 	background: #fff;
 	border-radius: 0.6em;
+	padding-top: 1em;
+}
+
+body>div>article>header {
+	padding: 0 30px;
+	font-size: 1.5em;
+	line-height: 2em;
+	color: #fff;
+	background: deepskyblue;
+}
+
+body>div>article>section {
+	padding: 30px;
 }
